--- a/Workbook100/Views/CollectionCell/Products/CollectionCell.xib
+++ b/Workbook100/Views/CollectionCell/Products/CollectionCell.xib
@@ -12,67 +12,67 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="hga-8q-U2K" customClass="CollectionCell" customModule="Workbook100" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="180" height="277"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PbB-Vo-oDv">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+                <rect key="frame" x="0.0" y="0.0" width="180" height="277"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="NUq-ht-DpM" userLabel="Main Stack">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="180" height="277"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="SXS-jI-9as" userLabel="Bubble Stack">
-                                <rect key="frame" x="0.0" y="0.0" width="200" height="20"/>
+                                <rect key="frame" x="0.0" y="0.0" width="180" height="18"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4P0-AQ-dCX" customClass="CollectionCellLabelBubble" customModule="Workbook100" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="65.5" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="58.5" height="18"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Essential" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVU-w5-bq9" customClass="CollectionCellLabelBubble" customModule="Workbook100" customModuleProvider="target">
-                                        <rect key="frame" x="67.5" y="0.0" width="65" height="20"/>
+                                        <rect key="frame" x="60.5" y="0.0" width="59" height="18"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blank" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aDY-Ea-8xe" customClass="CollectionCellLabelBubble" customModule="Workbook100" customModuleProvider="target">
-                                        <rect key="frame" x="134.5" y="0.0" width="65.5" height="20"/>
+                                        <rect key="frame" x="121.5" y="0.0" width="58.5" height="18"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="wj3-lf-2sE"/>
+                                    <constraint firstAttribute="height" constant="18" id="wj3-lf-2sE"/>
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qSn-Ui-nm9" customClass="CollectionCellLabel" customModule="Workbook100" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="200" height="20"/>
+                                <rect key="frame" x="0.0" y="18" width="180" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="zsl-sc-2av"/>
+                                    <constraint firstAttribute="height" constant="18" id="zsl-sc-2av"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HFo-4Q-dMA" userLabel="Image View">
-                                <rect key="frame" x="0.0" y="40" width="200" height="200"/>
+                                <rect key="frame" x="0.0" y="36" width="180" height="180"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SJY-fm-AYQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QDq-5l-aRL" customClass="CollectionCellLabel" customModule="Workbook100" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image Coming Soon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZi-zz-nsU">
-                                        <rect key="frame" x="46.5" y="90.5" width="107" height="19.5"/>
+                                        <rect key="frame" x="36.5" y="80.5" width="107" height="19.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="14"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -85,33 +85,38 @@
                                     <constraint firstItem="QDq-5l-aRL" firstAttribute="top" secondItem="HFo-4Q-dMA" secondAttribute="top" id="JAa-si-HHV"/>
                                     <constraint firstAttribute="trailing" secondItem="SJY-fm-AYQ" secondAttribute="trailing" id="LrK-a3-Sd2"/>
                                     <constraint firstItem="SJY-fm-AYQ" firstAttribute="top" secondItem="HFo-4Q-dMA" secondAttribute="top" id="VGz-8E-hM3"/>
-                                    <constraint firstAttribute="trailing" secondItem="QDq-5l-aRL" secondAttribute="trailing" multiplier="2" id="a5G-N8-3Qa"/>
+                                    <constraint firstAttribute="trailing" secondItem="QDq-5l-aRL" secondAttribute="trailing" id="a5G-N8-3Qa"/>
                                     <constraint firstAttribute="width" secondItem="HFo-4Q-dMA" secondAttribute="height" multiplier="1:1" id="cB1-oZ-mN8"/>
                                     <constraint firstItem="QDq-5l-aRL" firstAttribute="leading" secondItem="HFo-4Q-dMA" secondAttribute="leading" id="rOx-7y-826"/>
                                     <constraint firstAttribute="bottom" secondItem="SJY-fm-AYQ" secondAttribute="bottom" id="yw2-pZ-8Xn"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oip-xb-gSJ" userLabel="Bottom Stack">
-                                <rect key="frame" x="0.0" y="240" width="200" height="60"/>
+                                <rect key="frame" x="0.0" y="216" width="180" height="61"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dLF-Df-GRY" customClass="RuleLine" customModule="Workbook100" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="10"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="10"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="10" id="Oq2-aW-h4B"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="4sU-Lx-ycI" userLabel="SKU Stack">
-                                        <rect key="frame" x="0.0" y="10" width="200" height="50"/>
+                                        <rect key="frame" x="0.0" y="10" width="180" height="51"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SKULeft" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSq-NF-5UM" customClass="CollectionCellLabel" customModule="Workbook100" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="99" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSq-NF-5UM" customClass="CollectionCellLabel" customModule="Workbook100" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="89" height="37"/>
+                                                <string key="text">S: 20012-00000
+M: 20012-00001
+L: 20012-00002</string>
+                                                <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="11"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SKURight" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7B5-6B-Y7O" customClass="CollectionCellLabel" customModule="Workbook100" customModuleProvider="target">
-                                                <rect key="frame" x="101" y="0.0" width="99" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7B5-6B-Y7O" customClass="CollectionCellLabel" customModule="Workbook100" customModuleProvider="target">
+                                                <rect key="frame" x="91" y="0.0" width="89" height="24.5"/>
+                                                <string key="text">XL: 20012-00003
+2XL: 20012-00004</string>
+                                                <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="11"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
